# waveform-mcp

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
src/: cli_parser.rs  hierarchy.rs  lib.rs  main.rs  signal.rs
tests/: hierarchy_tests.rs
