[package]
name = "waveform-mcp"
version = "0.3.0"
edition = "2021"
description = "MCP server for reading VCD/FST waveform files using the wellen library"
license = "MIT"
authors = ["Jiajie Chen <c@jia.je>"]
repository = "https://github.com/jiegec/waveform-mcp"
keywords = ["waveform", "vcd", "fst", "mcp", "model-context-protocol"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "waveform-mcp"
path = "src/main.rs"

[dependencies]
wellen = "0.20"
rmcp = { version = "0.14", features = ["transport-io", "transport-streamable-http-server"] }
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
lalrpop-util = { version = "0.22", features = ["lexer"] }
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
tempfile = "3.24"
